// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases conditional: classes 1`] = `
Set {
  "font-semibold",
  "font-normal",
  "block",
  "truncate",
}
`;

exports[`cases conditional: generated-css 1`] = `
".font-semibold {
  font-weight: 600;
}
.font-normal {
  font-weight: 400;
}
.block {
  display: block;
}
.truncate {
  overflow: hidden;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`cases inline style: classes 1`] = `
Set {
  "relative",
  "top-0",
}
`;

exports[`cases inline style: generated-css 1`] = `
".top-0 {
  top: 0px;
}
.relative {
  position: relative;
}"
`;

exports[`cases multiple lines: classes 1`] = `
Set {
  "p-4",
  "m-5",
}
`;

exports[`cases multiple lines: generated-css 1`] = `
".m-5 {
  margin: 1.25rem;
}
.p-4 {
  padding: 1rem;
}"
`;

exports[`cases uppercase classnames: classes 1`] = `
Set {
  "text-lightBlue-500",
}
`;

exports[`cases uppercase classnames: generated-css 1`] = `
".text-lightBlue-500 {
  --tw-text-opacity: 1;
  color: rgba(14, 165, 233, var(--tw-text-opacity));
}"
`;

exports[`cases utilities grouping: classes 1`] = `
Set {
  "bg-white",
  "font-light",
  "sm:hover:bg-gray-100",
  "sm:hover:font-medium",
}
`;

exports[`cases utilities grouping: classes-pending 1`] = `
Set {
  "bg-white",
  "font-light",
  "sm:hover:bg-gray-100",
  "sm:hover:font-medium",
}
`;

exports[`cases utilities grouping: generated-css 1`] = `
".bg-white {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
}
.font-light {
  font-weight: 300;
}
@media (min-width: 640px) {
  .sm\\\\:hover\\\\:bg-gray-100:hover {
    --tw-bg-opacity: 1;
    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
  }
  .sm\\\\:hover\\\\:font-medium:hover {
    font-weight: 500;
  }
}"
`;

exports[`cases variables: classes 1`] = `
Set {
  "bg-$test-variable",
}
`;

exports[`cases variables: generated-css 1`] = `
".bg-\\\\$test-variable {
  background-color: var(--test-variable);
}"
`;
